<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity6">

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="11dp"
      android:text="@string/product_description_label"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextName" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="11dp"
      android:text="@string/price_label"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

  <Button
      android:id="@+id/editProduct"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="100dp"
      android:backgroundTint="@color/amarillo"
      android:text="@string/edit_buton"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <ImageButton
      android:id="@+id/deleteProduct"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="35dp"
      android:layout_marginBottom="91dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:srcCompat="@drawable/delete_icon" />

  <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="11dp"
      android:text="@string/quantity_label"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

  <EditText
      android:id="@+id/editTextQuantity"
      android:layout_width="0dp"
      android:layout_height="55dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="11dp"
      android:layout_marginEnd="16dp"
      android:background="@drawable/shape"
      android:ems="10"
      android:hint="@string/quantity"
      android:inputType="number"
      android:padding="10dp"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView11" />

  <EditText
      android:id="@+id/editTextPrice"
      android:layout_width="0dp"
      android:layout_height="55dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="11dp"
      android:layout_marginEnd="16dp"
      android:background="@drawable/shape"
      android:ems="10"
      android:hint="@string/price"
      android:inputType="number"
      android:padding="10dp"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView10" />

  <EditText
      android:id="@+id/editTextDescription"
      android:layout_width="0dp"
      android:layout_height="55dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="11dp"
      android:layout_marginEnd="16dp"
      android:autofillHints="Description"
      android:background="@drawable/shape"
      android:ems="10"
      android:gravity="start|top"
      android:hint="@string/product_description_label"
      android:inputType="textMultiLine"
      android:padding="10dp"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView7"
      tools:ignore="VisualLintTextFieldSize,VisualLintLongText" />

  <EditText
      android:id="@+id/editTextName"
      android:layout_width="0dp"
      android:layout_height="55dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="16dp"
      android:autofillHints="product name"
      android:background="@drawable/shape"
      android:ems="10"
      android:hint="@string/product_name"
      android:inputType="text"
      android:padding="10dp"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView6"
      tools:ignore="VisualLintTextFieldSize" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="99dp"
      android:text="@string/product_name_label"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageButton
      android:id="@+id/exit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:contentDescription="@string/back_icono"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/back_icon"
      tools:ignore="ImageContrastCheck" />

  <ImageView
      android:id="@+id/imageView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:contentDescription="@string/button_delete_description"
      app:layout_constraintBottom_toTopOf="@+id/deleteProduct"
      app:layout_constraintEnd_toEndOf="@+id/deleteProduct"
      app:layout_constraintTop_toTopOf="@+id/deleteProduct"
      app:srcCompat="@drawable/delete_icono" />

</androidx.constraintlayout.widget.ConstraintLayout>