<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/titulo_login"
        android:textColor="@color/letra"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/text_usuario"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/input_correo"
        android:layout_width="0dp"
        android:layout_height="58dp"

        android:layout_marginStart="14dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/login_usuario_input_hit"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/letra"
        android:textSize="24sp"
        app:circularflow_defaultRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/login_contraseña_input_hit"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/letra"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/toReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="14dp"
        android:importantForAutofill="no"
        android:text="@string/login_contraseña"
        android:textColor="@color/letra"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/input_password"
        app:layout_constraintStart_toStartOf="@+id/input_password"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login_usuario"
        android:textColor="@color/letra"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/input_correo"
        app:layout_constraintStart_toStartOf="@+id/input_correo"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/toReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/buton_login_register"
        android:textColor="@color/letra"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="111dp"
        android:backgroundTint="@color/amarillo"
        android:text="@string/buton_login"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="main"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/icono_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flatuibox"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>